# image-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
imagerag/: __init__.py  cli.py  indexer.py  searchtool.py  ui.py  visualize.py
tests/: test_indexer.py  test_searcher.py
